--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,3 +13,7 @@ license = {file = "LICENSE"}
 
 version         = "0.0.1"
 requires-python = ">=3.13"
+dependencies = [
+    "pandas>=2.2.3",
+    "spotipy>=2.25.0",
+]
